test/syc/good/lteq.c
/*
 * Less than or equal
 */

int a, b;

int lteq(void)
{
	return (int)(a <= b);
}
