test/syc/bad/duplvar.c
/*
 * Duplicate local variable
 */

int foo(void)
{
	int a, a;
	return 0;
}
